--- a/Mock/templates/student/profile.html
+++ b/Mock/templates/student/profile.html
@@ -37,7 +37,7 @@
                     </div>
 
                     <div class="mt-4 md:mt-0 flex-shrink-0 w-full md:w-auto">
-                        <a href="{% url 'change_password' %}" 
+                        <a href="{% url 'mock_change_password' %}" 
                             class="w-full md:w-auto inline-flex items-center justify-center gap-2 px-6 py-3 bg-gradient-to-r from-rose-500 to-pink-600 text-white font-extrabold text-base rounded-xl shadow-lg hover:shadow-2xl transition hover:from-rose-600 hover:to-pink-700 focus:ring-4 focus:ring-pink-300">
                             <i class="fas fa-key"></i> Parolni o'zgartirish
                         </a>
