--- a/Mock/templates/partials/course_card.html
+++ b/Mock/templates/partials/course_card.html
@@ -4,7 +4,7 @@
     
     <div class="h-44 relative bg-gradient-to-br from-indigo-600 to-purple-600 group">
         {% if course.course_img %}
-            <img src="{{ course.course_img.url }}"
+            <img src="https://satmakon-cdn.b-cdn.net/{{ course.course_img }}"
                  class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-105"
                  alt="{{ course.title }} rasmi">
         {% else %}
