--- a/Mock/templates/partials/questions_list.html
+++ b/Mock/templates/partials/questions_list.html
@@ -71,7 +71,7 @@
                         
                         {% if question.image %}
                         <div class="mb-4 max-w-xs mx-auto">
-                            <img src="{{ question.image.url }}" alt="{% trans 'Savolga oid rasm' %}" class="w-full h-auto rounded-lg shadow-md border">
+                            <img src="https://satmakon-cdn.b-cdn.net/{{ question.image }}" alt="{% trans 'Savolga oid rasm' %}" class="w-full h-auto rounded-lg shadow-md border">
                         </div>
                         {% endif %}
 
