--- a/Mock/templates/questions/add_questions.html
+++ b/Mock/templates/questions/add_questions.html
@@ -211,7 +211,7 @@
     </div>
 </div>
 {% endblock %}
-
+{{ form.media }}
 {% block extra_js %}
 <script>
     // 💡 MUHIM: CKEDITOR_SECURITY_NOTICE ni yoqamiz
